# hacl-star

./: Makefile.common
bindings/ocaml/: Hacl.ml  Hacl.mli  Utils.ml
bindings/ocaml/tests/: blake2_test.ml  blake2_timing.ml  dune
code/: Makefile
code/chacha20/: Hacl.Impl.Chacha20.Core32xN.fst  Hacl.Spec.Chacha20.Lemmas.fst  Hacl.Spec.Chacha20.Vec.fst
code/hash/: Makefile
code/poly1305/: Hacl.Impl.Poly1305.Field32xN.fst  Hacl.Poly1305.Field32xN.Lemmas1.fst  Hacl.Poly1305.Field32xN.Lemmas2.fst  Hacl.Spec.Poly1305.Field32xN.Lemmas.fst  Hacl.Spec.Poly1305.Field32xN.fst
code/snapshot/: Makefile  Tezos.fst  Tezos.fsti
hints/: Hacl.Impl.Blake2.Core.fst.hints  Hacl.Impl.Blake2.Core.fsti.hints  Hacl.Impl.Blake2.Generic.fst.hints  Lib.Buffer.fst.hints  Lib.Buffer.fsti.hints  Lib.ByteBuffer.fst.hints  Lib.ByteSequence.fst.hints  Lib.IntTypes.fst.hints  Lib.IntTypes.fsti.hints  Lib.IntVector.fsti.hints  Lib.Sequence.fst.hints  Spec.AES.fst.hints  Spec.Agile.Hash.fst.hints  Spec.Blake2.fst.hints  Spec.GaloisField.fst.hints  Spec.Hash.Lemmas.fst.hints  Spec.SHA1.fst.hints  Spec.SHA2.Lemmas.fst.hints
lib/: Lib.IntVector.Intrinsics.fsti  Lib.IntVector.fst  Lib.IntVector.fsti  Lib.Sequence.fst
lib/c/: libintvector.h
specs/: Spec.Chacha20.fst  Spec.Poly1305.fst
tests/: Makefile  chacha20-vec-test.c  p256-test.c  sha2-test.c
