(tests
 (names aead_test
        curve25519_test
        ed25519_test
        hash_test
        poly1305_test
        hmac_test
        hkdf_test
        nacl_test
        drbg_test
        blake2_test
        blake2_timing)
 (libraries evercrypt bigstring digestif.c)
 (flags (:standard -open Evercrypt -warn-error -3)))
